# FirstData

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  PRD.md  PROJECT_STATUS.md  README.en.md  README.ja.md  README.md  README_NEW.md  ROADMAP.md  batch-datasource.txt  batch-datasources-top100.md  batch-datasources.txt  batch-run-results.md  batch-scraper-dual-skill.sh  batch-scraper.sh  datasource-acquisition-fallback-strategy.md  datasource-publisher.skill  pyproject.toml  requirements.txt  server.json  test-batch-scraper.sh
.claude/: .mcp.json  tested_tools.json
.claude/agents/: datasource-classifier.md  firstdata-classifier.md
.claude/commands/: commit.md  merge-request.md  rebuild-datasource-mcp.md  rebuild-firstdata-mcp.md
.claude/skills/datasource-fetcher/: SKILL.md
.claude/skills/datasource-publisher/: SKILL.md
.claude/skills/datasource-scraper/: SKILL.md
.claude/skills/firstdata-fetcher/: SKILL.md
.claude/skills/firstdata-publisher/: SKILL.md
.claude/skills/firstdata-scraper/: SKILL.md
.github/ISSUE_TEMPLATE/: claim-task.md
.github/workflows/: claude.yml  secrecy-check.yml  update-indexes.yml  validate-sources.yml
assets/badges/: progress.json  sources-count.json
datasource-hub-mcp/: .env  .env.example  .mcp.json  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py  server_http.py  server_stdio.py  检索算法说明.md
datasource-hub-mcp/test/: README.md  run_tests.py  test_report_20251218_155718.md  test_report_20251219_141611.md  test_report_20251219_184014.md  test_server.py
datasource-hub-rag-mcp/: .env.example  README.md  build_index.py  docker-compose.yml  requirements.txt  server_rag.py  test_connection.py
docs/: CONTRIBUTING.md  data-collection-guide.md  getting-started.md  positioning-rollout-tracker.md  quality-criteria.md
docs/adr/: ADR-001-positioning-context-layer.md  README.md
docs/verification/: cdn-distribution-r14.md  r14-cdn-raw.csv
eval_system/datasource-hub-mcp/: question.json  schema_v0.json  tool_coverage.json
firstdata/badges/: sources-count.json
firstdata/indexes/: all-sources.json  by-authority.json  by-domain.json  by-region.json  statistics.json
firstdata/schemas/: DOMAINS.md  datasource-schema.json  suggested-standard-domains.json
firstdata/sources/: README.md
firstdata/sources/academic/: ieee-xplore.json
firstdata/sources/china/: README.md  beijing-stock-exchange.json  china-cbirc.json  china-csdc.json  china-sac.json  cninfo.json  csi-index.json  shanghai-clearing-house.json  view_samples.sh
firstdata/sources/regional/: asean-centre-for-energy.json
firstdata/sources/sectors/: README.md
issues/: RATING_SYSTEM_ANALYSIS.md  SCHEMA_COMPARISON.md  issue.md
manifests/: deploy.yaml
openspec/: project.md
schemas/: datasource-schema.json
scripts/: analyze_domains.py  batch-scraper.sh  build_indexes.py  check_completeness.py  check_domains.py  check_ids.py  cleanup-tag-spaces.py  extract_with_categories.py  fix_domain_cases.py  generate_indexes.py  normalize_standard_domains.py  pre-pr-check.sh  r14_cdn_fingerprint.py  rebuild-mcp.sh  sources_report.json  taxonomy-health-check.py  validate.py
skills/: SKILL.md
skills/firstdata/: SKILL.md  mcp-tool-descriptions-draft.md
sources/: README.md
sources/academic/: README.md
sources/academic/biology/: 1000-genomes.json  ena.json  genbank.json  tcga.json  uk-biobank.json
sources/academic/chemistry/: chembl.json  drugbank.json  pubchem.json
sources/academic/economics/: bis-statistics.json  conference-board.json  ggdc-databases.json  nber.json  penn-world-table.json  world-inequality-database.json
sources/academic/environment/: copernicus-open-access-hub.json
sources/academic/health/: clinicaltrials-gov.json  dhs.json  ghdx.json  pubmed.json  tcga.json
sources/academic/physics/: cern-open-data.json
sources/academic/physics_chemistry/: crystallography-open-database.json
sources/china/: README.md  view_samples.py
sources/countries/: README.md
sources/international/: README.md
sources/sectors/: README.md
tasks/: README.md  academic.md  countries.md  international.md  sectors.md
tasks/china/: README.md  agriculture.md  audit.md  civil-affairs.md  culture.md  economy.md  education.md  environment.md  finance.md  health.md  housing.md  industry.md  justice.md  labor.md  meteorology.md  national.md  provincial.md  research.md  resources.md  special.md  technology.md  transport.md
tests/mcp/: run_tests.py  test_cases.md  test_performance.py
(+925 files in other folders)
