[project]
name = "firstdata"
version = "0.1.0"
description = "A centralized repository for discovering and accessing high-quality data sources"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.0.0",
    "requests>=2.28.0",
    "mcp>=1.9.2",
    "pydantic>=2.12.3",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "langchain>=1.0.2",
    "langchain-anthropic>=1.0.2",
    "langgraph>=1.0.2",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "ruff>=0.8.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "PERF",   # perflint
]
ignore = [
    "E501",    # line-too-long (handled by formatter)
    "UP007",   # use X | Y for Union (keep Optional for clarity)
    "F841",    # local variable never used (sometimes intentional)
    # Pylint rules - too strict for this project
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches
    "PLR0911", # too many return statements
    "PLW2901", # redefined loop variable
    "PLC0415", # import not at top-level (dynamic imports are intentional)
    # Performance rules - may require significant refactoring
    "PERF401", # use list comprehension (not always cleaner)
    # RUF rules
    "RUF001",  # ambiguous unicode (intentional: ❯ prompt symbol)
    "RUF002",  # ambiguous unicode (Chinese docs in code)
    "RUF003",  # ambiguous unicode (Chinese comments)
    "RUF012",  # mutable class attributes (Pydantic models)
    "RUF022",  # __all__ not sorted (maintain logical order)
    # PTH rules - pathlib migration is gradual
    "PTH",     # all pathlib rules (gradual migration)
    # RUF059 - unused variables prefixed with _
    "RUF059",  # unused unpacked variables (intentional _ prefix)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "PLR2004", # magic values in tests
    "B007",    # unused loop variable in tests
    "SIM102",  # nested if statements (clearer in test assertions)
    "SIM108",  # ternary operator (not always clearer)
    "N803",    # argument name should be lowercase (mock MCP types)
]
".claude/skills/**/*.py" = [
    "PLR0915", # too many statements (these are standalone scripts)
    "SIM116",  # use dict instead of consecutive if (sometimes if is clearer)
    "PLC0206", # dict iteration without .items() (value not needed in this case)
    "F401",    # unused import (used for availability check)
]