[project]
name = "firstdata"
version = "0.1.0"
description = "The External Facts Context Layer for AI Agents — purpose-built, authoritative, structured data sources"
authors = [
    { name = "mininglamp", email = "firstdata@mininglamp.com" },
]
requires-python = ">=3.10"
dependencies = [
    "check-jsonschema>=0.36.2",
]
